force-app/main/default/objects/Employee__c/fields/Place__c.field-meta.xml
<CustomField>
    <fullName>Place__c</fullName>
    <label>Place</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SBNagar</fullName>
            </value>
            <value>
                <fullName>LBNagar</fullName>
            </value>
            <value>
                <fullName>Marthali</fullName>
            </value>
            <value>
                <fullName>ECity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>